Fixed some layout issues on mobile.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -29,13 +29,33 @@ blockquote {
     box-shadow: 0 0 10px darken($primary-500, 30%);
     border-radius: 50%;
 }
+.hello_mask {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    overflow: hidden;
+}
 .hello {
-    font-size: 206px;
     position: absolute;
     bottom: -34px;
-    left: 195px;
     z-index: 1;
     color: lighten($primary-500, 10%);
+    @media screen and (max-width: 500px) {
+        font-size: 206px;
+        left: -22px;
+    }
+    @media screen and (min-width: 500px) {
+        font-size: 306px;
+        left: -22px;
+        bottom: -150px;
+    }
+    @media screen and (min-width: 900px) {
+        font-size: 383px;
+        left: -22px;
+        bottom: -200px;
+    }
 }
 h1 {
     color: $primary-500;
@@ -45,6 +65,11 @@ h1 {
 }
 .social-icons img {
     width: 45px;
+}
+.my-description {
+    @media screen and (max-width: 1200px) {
+        margin-bottom: 30px;
+    }
 }
 .post-list > li {
     background-color: white;
